garde_derive_tests/tests/compile-fail/no_validation.stderr
error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/compile-fail/no_validation.rs:3:5
  |
3 |     field: u64,
  |     ^^^^^^^^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
 --> tests/compile-fail/no_validation.rs:7:14
  |
7 | struct Tuple(u64);
  |              ^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
  --> tests/compile-fail/no_validation.rs:11:14
   |
11 |     Struct { field: u64 },
   |              ^^^^^^^^^^

error: field has no validation, use `#[garde(skip)]` if this is intentional
  --> tests/compile-fail/no_validation.rs:12:11
   |
12 |     Tuple(u64),
   |           ^^^
